[package]
name = "hollywood"

description = "hollywood actor framework"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["actor", "compute", "graph", "pipeline"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/farm-ng/hollywood/"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
drawille = "0.3"
# hollywood intends to use only basic features of egui, hence 
# future versions of egui will likely/hopefully work
eframe = {version = ">= 0.27, <1.0", features = ["wgpu"], optional = true}
env_logger = {version = "0.11", optional = true}
grid = "0.13"
hollywood_macros = {version = "0.5", path = "hollywood_macros"}
# hollywood intends to use only very basic features of nalgebra, hence 
# future versions of nalgebra before the major < 1.0 release are likely to work
nalgebra = ">= 0.32, <1.0"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
# executor feature needed
tokio = {version = "1.28", features = ["full"]}
tokio-stream = "0.1"

[features]
default = ["egui"]
egui = ["dep:eframe", "dep:env_logger"]
