[package]
name = "hollywood_macros"

description = "Macros for the Hollywood actor framework"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "Apache-2.0"
keywords = ["actor", "compute", "graph", "pipeline"]
readme = "../README.md"
repository = "https://github.com/farm-ng/hollywood/tree/main/hollywood_macros"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["full"] }
quote = "1.0.9"
convert_case = "0.6.0"
