[package]
name = "hollywood_macros"

description = "Macros for the Hollywood actor framework"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["actor", "compute", "graph", "pipeline"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/farm-ng/hollywood/tree/main/hollywood_macros"
version = "0.7.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full"]}
